feat(recommendations): add weekly skill program